[gd_scene load_steps=14 format=2]

[ext_resource path="res://World.gd" type="Script" id=1]
[ext_resource path="res://Player/Pirate.tscn" type="PackedScene" id=2]
[ext_resource path="res://WorldEnvironment.tscn" type="PackedScene" id=3]
[ext_resource path="res://Block.tscn" type="PackedScene" id=4]
[ext_resource path="res://UIDisplay.tscn" type="PackedScene" id=5]
[ext_resource path="res://Menus/PauseScreen.tscn" type="PackedScene" id=6]
[ext_resource path="res://WaveTimer.tscn" type="PackedScene" id=7]
[ext_resource path="res://Menus/DeathScreen.tscn" type="PackedScene" id=8]


[sub_resource type="OpenSimplexNoise" id=1]

[sub_resource type="NoiseTexture" id=2]
noise = SubResource( 1 )

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 0.72549, 0.552941, 0.439216, 1 )
metallic = 0.45
metallic_texture = SubResource( 2 )

[sub_resource type="CubeMesh" id=4]
material = SubResource( 3 )
size = Vector3( 100, 100, 2 )

[sub_resource type="BoxShape" id=5]
extents = Vector3( 50, 1, 50 )

[node name="World" type="Spatial"]
script = ExtResource( 1 )

[node name="UIDisplay" parent="." instance=ExtResource( 5 )]

[node name="PauseScreen" parent="." instance=ExtResource( 6 )]

[node name="DeathScreen" parent="." instance=ExtResource( 8 )]
visible = false

[node name="Blocks" type="Spatial" parent="."]

[node name="Block" parent="Blocks" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -6.164, 1, 25.427 )

[node name="Block4" parent="Blocks" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 26.607, 1, 16.826 )

[node name="Block5" parent="Blocks" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -36.1133, 2.18189, 31.5652 )

[node name="Block6" parent="Blocks" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -36.1133, 2.18189, 31.5652 )

[node name="Block3" parent="Blocks" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -22.001, 1, 28.418 )

[node name="Block2" parent="Blocks" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 11.154, 1, -36.695 )

[node name="Block7" parent="Blocks" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 7.765, 1, 22.99 )

[node name="Spiders" type="Spatial" parent="."]

[node name="Pirate" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )

[node name="StaticBody" type="StaticBody" parent="."]

[node name="MeshInstance" type="MeshInstance" parent="StaticBody"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, 1, 0, -1, -1.62921e-07, 0, 0, 0 )
mesh = SubResource( 4 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="StaticBody"]
shape = SubResource( 5 )

[node name="WorldEnvironment" parent="." instance=ExtResource( 3 )]

[node name="WaveTimer" parent="." instance=ExtResource( 7 )]
[connection signal="dead" from="Pirate" to="." method="_on_Pirate_dead"]
